--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ sass:
 
 # Resume settings
 resume_avatar:                  "true"
-resume_name:                    "Lisa M. Simpson"
+resume_name:                    "Md Shohag Ali Sarder"
 resume_title:                   "Software Engineer"
 
 # used for the contact button in _layouts/resume.html
@@ -23,7 +23,7 @@ resume_contact_address:         "41 Henderson Ave, Cape Girardeau, MO 63701, USA
 resume_header_contact_info:     "41 Henderson Ave, Cape Girardeau, MO 63701, USA • 573-200-3006 • shohagsb@gmail.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>This is the executive summary. You should write a few brief, concise, and meaningful sentences about yourself from a professional context, and your immediate career goals. Make the length appropriate for your needs, but keep it brief and concise</p>"
+resume_header_intro: "<p>Android developer with over 3+ Years in Mobile App Development</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
