--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
+- degree: Bachelor of Science, Computer Science and Engineering
+  uni: Bangladesh University of Business and Technology
+  year: 2015 &mdash; 2020
   awards:
     - award: Summa Cumme Laude graduate
   summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
+  uni: Dinajpur Polytechnic Institute
+  year: 2015
   award: Most likely to succeed
   summary: You can choose to have either a single or multiple awards
