--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,12 @@
 # Skills
-# Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+# Languages
+- skill: Languages
+  description: Java, RxJava, Kotlin, PHP
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+# Technologies
+- skill: Technologies
+  description: Android, Espresso, Mockito, OkHttp + Retrofit, IoT, Firebase (Authentication, Firestore, Storage, Cloud Messaging, Cloud Functions, ML Kit), Git, JIRA, TeamCity
 
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Concepts
+- skill: Concepts
+  description: Object-orientated programming, mobile development, MVC, MVVM, Agile, Scrum, QA
